--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
   color: #fff;
   position: relative;
   background: transparent;
-  background-image: url("Screenshot 2021-11-30 112700.png");
+  background-image: url("https://i.gifer.com/ZOHV.gif");
 }
 
 body::before {
