--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,6 @@ body {
   color: #fff;
   position: relative;
   background: transparent;
-  background-image: url("https://i.gifer.com/ZOHV.gif");
 }
 
 body::before {
@@ -25,6 +24,12 @@ body::before {
   right: 0;
   top: 0;
   height: 100vh;
+}
+
+#grad1 {
+  height: 200px;
+  background-color: #cccccc;
+  background-image: linear-gradient(red, yellow);
 }
 
 @media (min-width: 1024px) {
