--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,18 +18,12 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: transparent;
+  background: #010e1b url("https://i.gifer.com/ZOHV.gif") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
   top: 0;
   height: 100vh;
-}
-
-#grad1 {
-  height: 200px;
-  background-color: #cccccc;
-  background-image: linear-gradient(red, yellow);
 }
 
 @media (min-width: 1024px) {
