--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #010e1b url("https://i.gifer.com/ZOHV.gif") top right no-repeat;
+  background: #010e1b url("https://i.gifer.com/SB2o.gif") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
