--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,9 @@
 
 body {
   display: flex;
+  font-family: "Open Sans", sans-serif;
   justify-content: center;
+  color: #fff;
   align-items: center;
   min-height: 100vh;
    background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
