--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,10 @@ import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 }
 
 body{
-    font-family: 'Exo', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  color: #fff;
+  position: relative;
+  background: transparent;
 }
 
 
