--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #010e1b url("Screenshot 2021-11-30 112700.png") top right no-repeat;
+  background: #010e1b url("https://c7.alamy.com/comp/PF3NWT/desktop-source-code-and-technology-background-developer-or-programer-with-coding-and-programming-wallpaper-by-computer-language-and-source-code-com-PF3NWT.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
